crates/koruma-derive-core/src/tests/snapshots/koruma_derive_core__tests__parse_field_tests__find_value_field_cfg_attr_complex_condition.snap
---
source: crates/koruma-derive-core/src/tests/parse_field_tests.rs
expression: "result.map(|(name, _ty)| name.to_string())"
---
Some(
    "actual",
)
