crates/koruma-derive-core/src/tests/snapshots/koruma_derive_core__tests__parse_field_tests__parse_field_cfg_attr_each.snap
---
source: crates/koruma-derive-core/src/tests/parse_field_tests.rs
assertion_line: 229
expression: parse_field_snapshot(&field)
---
Some(
    SnapshotFieldInfo {
        name: "scores",
        member: "scores",
        ty: "Vec < i32 >",
        validation: SnapshotValidationInfo {
            field_validators: [],
            element_validators: [
                SnapshotValidator {
                    name: "RangeValidation",
                    infer_type: false,
                    explicit_type: None,
                    args: [
                        (
                            "min",
                            "0",
                        ),
                        (
                            "max",
                            "100",
                        ),
                    ],
                },
            ],
            is_nested: false,
            is_newtype: false,
        },
    },
)
