crates/koruma-derive-core/src/tests/snapshots/koruma_derive_core__tests__parse_field_tests__parse_field_cfg_attr_generic_validator.snap
---
source: crates/koruma-derive-core/src/tests/parse_field_tests.rs
expression: parse_field_snapshot(&field)
---
Some(
    SnapshotFieldInfo {
        name: "score",
        member: "score",
        ty: "f64",
        validation: SnapshotValidationInfo {
            shape: "regular",
            field_validators: [
                SnapshotValidator {
                    label: None,
                    name: "GenericRange",
                    infer_type: true,
                    explicit_type: None,
                    builder_methods: [
                        (
                            "min",
                            [
                                "0.0",
                            ],
                        ),
                        (
                            "max",
                            [
                                "1.0",
                            ],
                        ),
                    ],
                },
            ],
            element_validators: [],
        },
    },
)
