crates/koruma-derive-core/src/tests/snapshots/koruma_derive_core__tests__parse_field_tests__parse_field_cfg_attr_multiple_validators.snap
---
source: crates/koruma-derive-core/src/tests/parse_field_tests.rs
expression: parse_field_snapshot(&field)
---
Some(
    SnapshotFieldInfo {
        name: "value",
        member: "value",
        ty: "i32",
        validation: SnapshotValidationInfo {
            shape: "regular",
            field_validators: [
                SnapshotValidator {
                    label: None,
                    name: "RangeValidation",
                    infer_type: false,
                    explicit_type: None,
                    builder_methods: [
                        (
                            "min",
                            [
                                "0",
                            ],
                        ),
                        (
                            "max",
                            [
                                "100",
                            ],
                        ),
                    ],
                },
                SnapshotValidator {
                    label: None,
                    name: "EvenValidation",
                    infer_type: false,
                    explicit_type: None,
                    builder_methods: [],
                },
            ],
            element_validators: [],
        },
    },
)
