crates/koruma-derive-core/src/tests/snapshots/koruma_derive_core__tests__parse_field_tests__parse_field_cfg_attr_nested.snap
---
source: crates/koruma-derive-core/src/tests/parse_field_tests.rs
assertion_line: 239
expression: parse_field_snapshot(&field)
---
Some(
    SnapshotFieldInfo {
        name: "inner",
        member: "inner",
        ty: "InnerStruct",
        validation: SnapshotValidationInfo {
            field_validators: [],
            element_validators: [],
            is_nested: true,
            is_newtype: false,
        },
    },
)
