crates/koruma-derive-core/src/tests/snapshots/koruma_derive_core__tests__parse_field_tests__parse_field_cfg_attr_newtype.snap
---
source: crates/koruma-derive-core/src/tests/parse_field_tests.rs
expression: parse_field_snapshot(&field)
---
Some(
    SnapshotFieldInfo {
        name: "index",
        member: "index",
        ty: "CommonVariableIndex",
        validation: SnapshotValidationInfo {
            shape: "newtype",
            field_validators: [],
            element_validators: [],
        },
    },
)
